--- a/Controls/ConnectionManagementControl.xaml
+++ b/Controls/ConnectionManagementControl.xaml
@@ -99,12 +99,12 @@
                       SelectionChanged="ConnectionsDataGrid_SelectionChanged">
                 <!-- 🔥 FACTOVA Grid 스타일 자동 적용 + IsReadOnly="False"로 편집 가능 -->
                 <DataGrid.Columns>
-                    <!-- ID -->
+                    <!-- ID: 특수 스타일 유지 (가운데정렬, 회색) -->
                     <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60" IsReadOnly="True">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
-                                <Setter Property="FontSize" Value="11"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
                                 <Setter Property="FontWeight" Value="SemiBold"/>
                                 <Setter Property="Foreground" Value="#FF6C757D"/>
                             </Style>
@@ -129,26 +129,14 @@
                     <!-- Version (ComboBox로 선택) -->
                     <DataGridComboBoxColumn Header="Version" 
                                             SelectedItemBinding="{Binding Version, UpdateSourceTrigger=PropertyChanged}"
-                                            Width="100">
-                        <DataGridComboBoxColumn.ElementStyle>
-                            <Style TargetType="ComboBox">
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="IsReadOnly" Value="True"/>
-                            </Style>
-                        </DataGridComboBoxColumn.ElementStyle>
-                        <DataGridComboBoxColumn.EditingElementStyle>
-                            <Style TargetType="ComboBox">
-                                <Setter Property="FontSize" Value="11"/>
-                                <Setter Property="IsEditable" Value="True"/>
-                            </Style>
-                        </DataGridComboBoxColumn.EditingElementStyle>
-                    </DataGridComboBoxColumn>
+                                            Width="100"/>
 
                     <!-- 활성 (CheckBox) -->
                     <DataGridCheckBoxColumn Header="활성" Binding="{Binding IsActive, UpdateSourceTrigger=PropertyChanged}" Width="60">
                         <DataGridCheckBoxColumn.ElementStyle>
                             <Style TargetType="CheckBox">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
                             </Style>
                         </DataGridCheckBoxColumn.ElementStyle>
                     </DataGridCheckBoxColumn>
@@ -158,6 +146,7 @@
                         <DataGridCheckBoxColumn.ElementStyle>
                             <Style TargetType="CheckBox">
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
                             </Style>
                         </DataGridCheckBoxColumn.ElementStyle>
                     </DataGridCheckBoxColumn>
